--- a/cat.css
+++ b/cat.css
@@ -242,6 +242,18 @@ margin-left: -15rem;
 .all-cat, .all-cat1, .all-cat2, .all-cat3, .all-cat4{
 margin: 0px 0px 50rem;
 }
+@media (min-width: 1024px)
+{
+.box3 {    margin-left: 4rem;
+    margin-right: 3rem;            /* NEED WRITE FOR MOBILE  HEIGHT AND BODY!!!! */
+  }  
+  .cot {
+    height: 100rem;
+}
+ .all-cat, .all-cat1, .all-cat2, .all-cat3, .all-cat4 {
+    margin: 0px 0px 20rem;
+} 
+  }
 @media (min-width: 1200px) {
 .cot  {height: ;            /* NEED WRITE FOR MOBILE  HEIGHT AND BODY!!!! */
 }
