--- a/cat.css
+++ b/cat.css
@@ -233,27 +233,35 @@ border-radius: 25%;
 background-color: green;
 height: 50rem;
 }
-@media (min-width: 768px) {
-.cot  {height: ;            /* NEED WRITE FOR MOBILE  HEIGHT AND BODY!!!! */
-}
+
 .newcolor {
 margin-left: -15rem;
 }
-.all-cat, .all-cat1, .all-cat2, .all-cat3, .all-cat4{
-margin: 0px 0px 50rem;
+@media (min-width: 736px) {
+
+}
+
+@media (min-width: 768px) {
+    .box3{  margin-right: -3.5rem;}
+.newcolor {
+    margin-left: -75rem;
+} 
+    .cot {
+    height: 100rem;
+}
+
+.box1 {
+    width: 39rem;
+}
+ .all-cat,.all-cat1,.all-cat2,.all-cat3,.all-cat4{   margin: -4rem 1rem;
+    }
 }
 @media (min-width: 1024px)
 {
 .box3 {    margin-left: 4rem;
-    margin-right: 3rem;            /* NEED WRITE FOR MOBILE  HEIGHT AND BODY!!!! */
+    margin-right: 3rem;           
   }  
   .cot {
     height: 100rem;
 }
- .all-cat, .all-cat1, .all-cat2, .all-cat3, .all-cat4 {
-    margin: 0px 0px 20rem;
-} 
   }
-@media (min-width: 1200px) {
-.cot  {height: ;            /* NEED WRITE FOR MOBILE  HEIGHT AND BODY!!!! */
-}
