--- a/cat.css
+++ b/cat.css
@@ -255,7 +255,8 @@ margin-left: -15rem;
 .box1 {
     width: 39rem;
 }
- .all-cat,.all-cat1,.all-cat2,.all-cat3,.all-cat4{   margin-left: 1rem;
+ .all-cat,.all-cat1,.all-cat2,.all-cat3,.all-cat4
+    {   margin-left: 1rem;
     }
 }
 @media (min-width: 1024px)
