--- a/cat.css
+++ b/cat.css
@@ -816,7 +816,8 @@ font-size: 3rem;
 padding-top:1rem;
 }	
 .box3 {    margin-left: 4rem;
-margin-right: 3rem;           
+margin-right: 3rem; 
+width: 60rem;
 }  
 .cot {
 /* height: 105rem; */
