--- a/cat.css
+++ b/cat.css
@@ -749,12 +749,50 @@ color:white;
 width: 68rem;
 }
 .box3{
-margin-left: 0rem;
-margin-right: 0rem;
-width: 37rem;	
+margin-left: -1rem;
+width: 37rem;
+margin-right: 1rem;
+padding-bottom: 3rem;	
 }
-.cot {
-/* height: 108rem; */
+.text2 {
+    font-size: 1.7rem;
+   }
+ .cat{
+     background: url(img/2hil.png) 2rem 1rem no-repeat ;
+  background-size: 33%;
+   background-color: green;
+   height: 17rem;
+width: 27rem;
+  }
+  .cat1{
+     background: url(img/ro3.png) 2rem 1rem no-repeat;
+background-size: 30%;
+    background-color: green;
+	height: 17rem;
+width: 27rem;
+  }
+    .cat2{
+     background: url(img/pur1.png) 2rem 1rem no-repeat;
+  background-size: 48%;
+      background-color: green;
+	  height: 17rem;
+width: 27rem;
+  }
+  .cat:hover {
+background-size: 34%; 
+}
+  .cat1:hover {
+background-size: 31%; 
+}
+ .cat2:hover {
+background-size: 53%; 
+}
+.bn
+{
+font-size: 1.2rem;
+margin-top: -16rem;
+width: 43rem;
+margin-left: 15rem;
 }
 }
 @media (min-width: 768px) {
